--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <section class="page-wrapper">
         <div class="page-content">
             <div class="card">
+                <div class="logo">
+                    <svg class="pre-logo-svg" height="75px" width="75px" fill="#eee" viewBox="0 0 69 32">
+                        <path d="M68.56 4L18.4 25.36Q12.16 28 7.92 28q-4.8 0-6.96-3.36-1.36-2.16-.8-5.48t2.96-7.08q2-3.04 6.56-8-1.6 2.56-2.24 5.28-1.2 5.12 2.16 7.52Q11.2 18 14 18q2.24 0 5.04-.72z"></path>
+                    </svg>
+                </div>
+
                 <img src="/images/nike-yellow.jpeg" alt="nike shoe">
 
                 <div class="product-container">
@@ -30,6 +36,7 @@
     
                     <div class="shoe-size">
                         <select name="size" id="shoeSize">
+                            <option value="select-size">Select Size</option>
                             <option value="8">8</option>
                             <option value="9">9</option>
                             <option value="10">10</option>
@@ -44,6 +51,10 @@
             </div>
         </div>
     </section>
+
+    <!-- <script>
+        $("#shoeSize").prop("selectedIndex", 0);
+    </script> -->
     
 </body>
 </html>
