update img path

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     </svg>
                 </div>
 
-                <img src="/images/nike-yellow.jpeg" alt="nike shoe">
+                <img src="images/nike-yellow.jpeg" alt="nike shoe">
 
                 <div class="product-container">
                     <span class="shoe-type">Nike</span>
